fixing html overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,6 @@
 html {
   margin: 0;
   overflow-y: hidden;
-  height: 100vh;
 }
 header {
   height: 15vh;
